--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,9 @@
 <header>
     <div class="header-content">
         <div class="header-content-inner">
-            <h1>Your Favorite Source of Free Bootstrap Themes</h1>
+            <h1>Your Hanz Tech Inc</h1>
             <hr>
-            <p>Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
-            <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
+            <p>Technology Company based in Montreal,Canada. We specialize in software consulting and building cutsom electronics</p>
         </div>
     </div>
 </header>
