--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -7,9 +7,9 @@
                 <p>Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
             </div>
         <div class="col-lg-2 col-lg-offset-2 text-center">
-            <a href="https://twitter.com/{{ site.twitter_username }}">
-                <i class="fa fa-twitter fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                <p>{{ site.twitter_username }}</p>
+            <a href="https://youtube.com/channel/{{ site.youtube_username }}">
+                <i class="fa fa-youtube fa-3x wow bounceIn" data-wow-delay=".1s"></i>
+                <p>{{ site.youtube_username }}</p>
             </a>
         </div>
         <div class="col-lg-2 col-lg-offset-1 text-center">
@@ -22,6 +22,12 @@
             <a href="https://github.com/{{ site.github_username }}">
             <i class="fa fa-github fa-3x wow bounceIn" data-wow-delay=".1s"></i>
                 <p>{{ site.github_username }}</p>
+            </a>
+        </div>
+        <div class="col-lg-2 col-lg-offset-1 text-center">
+            <a href="https://tindie.com/stores{{ site.tindie_username }}">
+            <i class="fa fa-link fa-3x wow bounceIn" data-wow-delay=".1s"></i>
+                <p>{{ site.tindie_username }}</p>
             </a>
         </div>
 
