--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,9 @@
 <header>
     <div class="header-content">
         <div class="header-content-inner">
-            <h1>Your Hanz Tech Inc</h1>
+            <h1>Hanz Tech Inc</h1>
             <hr>
-            <p>Technology Company based in Montreal,Canada. We specialize in software consulting and building cutsom electronics</p>
+            <p>Technology company based in Montreal, Canada. We specialize in software development consulting and building custom electronics</p>
         </div>
     </div>
 </header>
