--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -6,27 +6,26 @@
                 <hr class="primary">
                 <p>Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
             </div>
-        <div class="col-lg-2 col-lg-offset-2 text-center">
+        <div class="col-md-2 col-lg-offset-1 text-center">
             <a href="https://youtube.com/channel/{{ site.youtube_username }}">
-                <i class="fa fa-youtube fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                <p>{{ site.youtube_username }}</p>
+                <i class="fa fa-youtube fa-1x wow bounceIn" data-wow-delay=".1s"></i>
             </a>
         </div>
-        <div class="col-lg-2 col-lg-offset-1 text-center">
+        <div class="col-md-2 col-lg-offset-1 text-center">
             <a href="mailto:{{ site.email }}">
-            <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
+            <i class="fa fa-envelope-o fa-1x wow bounceIn" data-wow-delay=".1s"></i>
                 <p>{{ site.email }}</p>
             </a>
         </div>
-        <div class="col-lg-2 col-lg-offset-1 text-center">
+        <div class="col-md-2 col-lg-offset-1 text-center">
             <a href="https://github.com/{{ site.github_username }}">
-            <i class="fa fa-github fa-3x wow bounceIn" data-wow-delay=".1s"></i>
+            <i class="fa fa-github fa-1x wow bounceIn" data-wow-delay=".1s"></i>
                 <p>{{ site.github_username }}</p>
             </a>
         </div>
-        <div class="col-lg-2 col-lg-offset-1 text-center">
+        <div class="col-md-2 col-lg-offset-1 text-center">
             <a href="https://tindie.com/stores{{ site.tindie_username }}">
-            <i class="fa fa-link fa-3x wow bounceIn" data-wow-delay=".1s"></i>
+            <i class="fa fa-link fa-1x wow bounceIn" data-wow-delay=".1s"></i>
                 <p>{{ site.tindie_username }}</p>
             </a>
         </div>
