--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -11,7 +11,7 @@
                 <i class="fa fa-youtube fa-1x wow bounceIn" data-wow-delay=".1s"></i>
             </a>
         </div>
-        <div class="col-md-2 col-md-offset-1 text-center">
+        <div class="col-md-2 text-center">
             <a href="mailto:{{ site.email }}">
             <i class="fa fa-envelope-o fa-1x wow bounceIn" data-wow-delay=".1s"></i>
                 <p>{{ site.email }}</p>
