--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -25,7 +25,7 @@
         <div class="col-md-2 text-center">
             <a href="https://tindie.com/stores/{{ site.tindie_username }}">
             <i class="fa fa-link fa-1x wow bounceIn" data-wow-delay=".1s"></i>
-                <p>{{ site.tindie_username }}</p>
+                <p>Tindie Store</p>
             </a>
         </div>
 
