--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,6 +2,13 @@
     <div class="header-content">
         <div class="header-content-inner">
             <h1>Hanz Tech Inc</h1>
+            <img
+                src="logo-01.svg"
+                alt="Hanz Tech Inc"
+                height="300"
+                width="300"
+                class="mx-auto d-block"
+            />
             <hr>
             <p>Technology company based in Montreal, Canada. We specialize in software development consulting and building custom electronics</p>
         </div>
