--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,8 @@
 <header>
     <div class="header-content">
         <div class="header-content-inner">
-            <h1>Hanz Tech Inc</h1>
             <img
-                src="logo-01.svg"
+                src="https://github.com/Hanz-Tech/h/blob/master/_includes/logo-01.svg"
                 alt="Hanz Tech Inc"
                 height="300"
                 width="300"
