update logo png

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,10 +2,10 @@
     <div class="header-content">
         <div class="header-content-inner">
             <img
-                src="https://github.com/Hanz-Tech/h/blob/master/_includes/logo-01.svg"
+                src="logo-01.png"
                 alt="Hanz Tech Inc"
-                height="300"
-                width="300"
+                height="400"
+                width="400"
                 class="mx-auto d-block"
             />
             <hr>
