update logo link

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
     <div class="header-content">
         <div class="header-content-inner">
             <img
-                src="logo-01.png"
+                src="https://raw.githubusercontent.com/Hanz-Tech/h/master/_includes/logo-01.png"
                 alt="Hanz Tech Inc"
                 height="400"
                 width="400"
