--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -18,7 +18,7 @@
         </div>
         <div class="col-md-2 text-center">
             <a href=" https://www.instagram.com/{{ site.ig_username }}">
-            <i class="fa fa-fa-instagram fa-1x wow bounceIn" data-wow-delay=".1s"></i>
+            <i class="fa fa-instagram fa-1x wow bounceIn" data-wow-delay=".1s"></i>
                 <p>{{ site.ig_username }}</p>
             </a>
         </div>
