--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -34,6 +34,12 @@
                 <p>Tindie Store</p>
             </a>
         </div>
-
+        <div class="col-md-2 text-center">
+            <a href="https://www.etsy.com/ca/shop/{{ site.etsy_username }}">
+            <i class="fa fa-link fa-1x wow bounceIn" data-wow-delay=".1s"></i>
+                <p>Etsy Store</p>
+            </a>
+        </div>
+        
     </div>
 </section>
