Remove etsy logo

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -36,7 +36,7 @@
         </div>
         <div class="col-md-2 col-md-offset-1 text-center">
             <a href="https://www.etsy.com/ca/shop/{{ site.etsy_username }}">
-            <i class="fa fa-etsy fa-1x wow bounceIn" data-wow-delay=".1s"></i>
+            <i class="fa fa-link fa-1x wow bounceIn" data-wow-delay=".1s"></i>
                 <p>Etsy Store</p>
             </a>
         </div>
